# 19-lesson-hw

./: pyproject.toml
tests/: utils.py
tests/API/: test_reqres.py
